# PrintGuard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  THIRD_PARTY_NOTICES.md  app.py  backends.py  ca_profile.xml  compose.yaml  core.py  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  hacs.json  main.html  mediamtx.yml  pyproject.toml  pyscript.toml  server.py
.claude/: launch.json
.github/workflows/: ci.yml  docker-publish.yml  docker.yml  publish.yml  python-publish.yml  release.yml
FDM-Sentinel/: app.py  index.html  requirements.txt
FDM-Sentinel/routes/: alert_routes.py  live_detection_routes.py
FDM-Sentinel/templates/: index.html
FDM-Sentinel/utils/: camera_utils.py  config.py  notification_utils.py
custom_components/printguard/: __init__.py  api.py  base.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  crypto.py  event.py  manifest.json  sensor.py
docker/: entrypoint.sh
docs/: api.md  architecture.md  deployment.md  overview.md  printers.md  setup.md
fdm_sentinel/: app.py  models.py  requirements.txt  sw.js
fdm_sentinel/routes/: alert_routes.py  camera_routes.py  debug_routes.py  detection_routes.py  index_routes.py  live_detection_routes.py  notification_routes.py  printer_routes.py  settings_routes.py  setup_routes.py  sse_routes.py
fdm_sentinel/static/: sw.js
fdm_sentinel/templates/: alert_page.html  cloudflare_setup.html  index.html  onboarding.html  settings.html  setup.html  shared_logic.html  warp_device_enrollment.html
fdm_sentinel/utils/: alert_utils.py  camera_state_manager.py  camera_utils.py  cloudflare_utils.py  config.py  detection_utils.py  model_utils.py  (+6 more)
minimised/: download.py  inference.py
models/: metadata.json  prototypes.json
packaging/: build.sh  desktop_entry.py  printguard.spec
print_guard/: app.py
printguard/: __init__.py  app.py  config.py  main.py  model.py  models.py  notifications.py  pysrc.py  requirements.txt  routes.py  webrtc.py
scripts/: convert_pytorch_to_executorch.py  convert_pytorch_to_onnx.py
templates/: printguard.xml
tests/: conftest.py  fakes.py  test_adapters.py  test_api.py  test_engine.py  test_mcp.py  test_mqtt.py  test_server_platform.py  test_tokens.py  test_updates.py
unraid/: printguard.xml
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+287 files in other folders)
