[project]
name = "printguard"
version = "2.2.3"
description = "Real-time 3D print failure detection"

license = "GPL-2.0-only"
requires-python = ">=3.12"
dependencies = [
    "ai-edge-litert>=2.1.5",
    "aiomqtt>=2.5.1",
    "av>=14.0",
    "fastapi>=0.136.3",
    "fastmcp>=3.4.2",
    "httpx>=0.28",
    "numpy>=2.1",
    "packaging>=24.0",
    "paho-mqtt>=2.1",
    "pydantic-settings>=2.14.2",
    "pyprusalink>=3.0",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
printguard = "printguard.server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["printguard"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
